aux_source_directory(. runtime_source)
aux_source_directory(manager  runtime_source)
aux_source_directory(executor runtime_source)

if(AMD)
aux_source_directory(manager/hip  runtime_source)
aux_source_directory(executor/hip runtime_source)
endif()

if(OPENCL)
aux_source_directory(manager/ocl  runtime_source)
aux_source_directory(executor/ocl runtime_source)
endif()

if(EMULATOR)
aux_source_directory(emulator runtime_source)
if(AMD)
aux_source_directory(emulator/hip runtime_source)
endif()

if(OPENCL)
aux_source_directory(emulator/ocl runtime_source)
endif()
endif()

aux_source_directory(utility runtime_source)

if(NVIDIA AND OPENCL)
    set(CMAKE_CXX_COMPILER "gcc")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif()
if(AMD)
    set(CMAKE_CXX_COMPILER "${ROCM_PATH}/bin/hipcc")
    set(HIPCC_FLAGS "--amdgpu-target=gfx906 --amdgpu-target=gfx908")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${HIPCC_FLAGS}")
endif()

set(CXX_FLAGS "-std=c++11")
if(DEFINED ENV{PIM_LOG_LEVEL})
    add_definitions(-DPIM_LOG_LEVEL=$ENV{PIM_LOG_LEVEL})
else()
    add_definitions(-DPIM_LOG_LEVEL=1)
endif()

message(STATUS "PIM Log level is " $ENV{PIM_LOG_LEVEL})

add_library(PimRuntime SHARED ${runtime_source})
if(AMD)
    if(TARGET)
        target_link_libraries (PimRuntime hsakmt glog gflags OpenCL)
    else()
	    target_link_libraries (PimRuntime hsakmt dramsim2 glog gflags OpenCL)
    endif()
else()
    if(TARGET)
        target_link_libraries (PimRuntime glog gflags OpenCL)
    else()
	    target_link_libraries (PimRuntime dramsim2 glog gflags OpenCL)
    endif()
endif()

if(PIM_COMPILER)
    target_link_libraries(PimRuntime PimC pimcompiler codegen)
endif()

if(NVIDIA AND OPENCL)
    install ( TARGETS PimRuntime LIBRARY DESTINATION ${PIM_PATH}/lib/)
    install ( FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/pim_runtime_api.h DESTINATION ${PIM_PATH}/include )
    install ( FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/pim_data_types.h DESTINATION ${PIM_PATH}/include )
endif()
if(AMD)
    install ( TARGETS PimRuntime LIBRARY DESTINATION ${ROCM_PATH}/lib/)
    install ( FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/pim_runtime_api.h DESTINATION ${ROCM_PATH}/include )
    install ( FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/pim_data_types.h DESTINATION ${ROCM_PATH}/include )
endif()
